--- a/public/css/globals.css
+++ b/public/css/globals.css
@@ -1,6 +1,8 @@
-@import url(./table.css);
-@import url(./modal.css);
+@import url(./table/table.css);
+@import url(./modal/modal.css);
 @import url(./main.css);
+@import url(./config/colors.css);
+@import url(./config/tools.css);
 
 * {
   margin: 0;
@@ -12,131 +14,12 @@ body {
 }
 
 header {
-  background: rgb(70, 142, 236);
-  color: #fff;
+  background: var(--color-primary);
+  color: var(--color-commun-var(--color-commun-White));
   width: 100%;
   height: 4vh;
   padding: 1rem 0;
   font-size: 1rem;
   font-weight: 700;
   margin: 0 auto;
-}
-header .logo-title {
-  max-width: 1300px;
-  margin: 0 auto;
-}
-
-header h1 {
-  width: 40%;
-  float: left;
-  font-size: 1.5em;
-  font-weight: 700;
-  padding: 0.5rem;
-}
-
-.title h1,
-.title h2,
-.title h3 {
-  color: #468eec;
-}
-
-section {
-  background: white;
-  border-radius: 5px;
-  max-width: 1280px;
-  margin: 0 auto;
-  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.306);
-}
-
-footer {
-  color: white;
-  text-align: center;
-  font-style: italic;
-  position: fixed;
-  bottom: 0;
-  margin: 0 auto;
-  width: 100%;
-}
-footer p {
-  color: #468eec;
-}
-
-.flex {
-  display: flex;
-}
-
-.align-items {
-  align-items: center;
-}
-
-.mb-1 {
-  margin-bottom: 1rem;
-}
-.mr-1 {
-  margin-right: 1rem;
-}
-.ml-1 {
-  margin-left: 1rem;
-}
-
-.mb-2 {
-  margin-bottom: 2rem;
-}
-.mr-2 {
-  margin-right: 2rem;
-}
-.ml-2 {
-  margin-left: 2rem;
-}
-
-.justify-end {
-  justify-content: end;
-}
-
-.justify-arround {
-  justify-content: space-around;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-button.btn-add {
-  padding: 0.5rem 2rem;
-  background: #468eec;
-  color: #fff;
-  font-size: 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button.btn-add:hover {
-  background: #468eecc9;
-}
-
-.box {
-  width: 50%;
-}
-
-.form-group {
-  padding: 1rem;
-}
-
-.form-group label {
-  width: 100%;
-  font-size: 1rem;
-  font-weight: 600;
-}
-.form-group input {
-  margin-top: 0.5rem;
-  padding: 0.4rem;
-  width: 90%;
-  border: 1px solid #468eec9d;
-}
-.form-group select {
-  margin-top: 0.5rem;
-  padding: 0.4rem;
-  width: 95%;
-  border: 1px solid #468eec;
 }
