--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,26 +1,14 @@
-.container {
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -7.5px;
-  margin-left: -7.5px;
-}
-
 .main {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: var(--color-commun-White);
   display: flex;
 }
 
 .main .nav {
   width: 200px;
   height: 100%;
-  background-color: rgba(227, 234, 235, 0.8);
+  background-color: var(--color-white-gray);
   margin-right: 1rem;
 }
 
@@ -40,7 +28,7 @@
   height: 30px;
   line-height: 30px;
   margin: 15px;
-  background-color: White;
+  background-color: var(--color-commun-White);
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
@@ -50,12 +38,12 @@
   position: absolute;
   top: 6px;
   left: 5px;
-  fill: #555;
+  fill: var(--color-commun-gray);
 }
 .searchbox input {
   padding: 0.3rem 0.3rem 0.3rem 2rem;
   width: 11rem;
-  border: 1px solid #5555554b;
+  border: 1px solid var(--color-black-gray);
   outline: 0;
   border-radius: 4px;
 }
@@ -63,11 +51,12 @@
 .main .nav .menu {
   width: 100%;
   margin: 15px;
-  color: #555;
+  color: var(--color-commun-gray);
 }
 
 .main .nav .menu ul {
   padding-left: 0px;
+  font-size: 1rem;
 }
 
 .main .nav .menu ul li {
@@ -82,6 +71,15 @@
   -webkit-border-radius: 4px;
   border-radius: 4px;
   transition: 0.25s all;
+  font-size: 1.2rem;
+}
+.main .nav .menu ul li:hover{
+  color: var(--color-primary);
+}
+
+.main .nav .menu ul li:hover ul{
+  color: var(--color-commun-black);
+  font-size: 1rem;
 }
 
 .main .nav .menu .title {
@@ -91,25 +89,12 @@
 }
 
 .view .content .list-tasks ul {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--color-commun-black);
   padding: 0;
 }
 .list-item {
-  border-top: 1px solid black;
+  border-top: 1px solid var(--color-commun-black);
   padding: 0.5rem 0.2rem;
-}
-.list-item input {
-  appearance: none;
-  border: 1px solid black;
-  width: 1rem;
-  height: 1rem;
-  border-radius: 4px;
-}
-
-.list-item input:checked {
-  background-image: url("./../img/checked.png");
-  background-size: contain;
-  background-position: center center;
 }
 
 .list-item .info select {
@@ -122,4 +107,86 @@
 
 .list-item .start-date {
   font-size: 1rem;
+}
+
+
+header .logo-title {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+header h1 {
+  width: 40%;
+  float: left;
+  font-size: 1.5em;
+  font-weight: 700;
+  padding: 0.5rem;
+  color: var(--color-commun-White);;
+}
+
+.title h1,
+.title h2,
+.title h3 {
+  color: var(--color-primary);
+}
+
+section {
+  background: var(--color-commun-White);
+  border-radius: 5px;
+  max-width: 1280px;
+  margin: 0 auto;
+  box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.306);
+}
+
+footer {
+  color: var(--color-commun-White);
+  text-align: center;
+  font-style: italic;
+  position: fixed;
+  bottom: 0;
+  margin: 0 auto;
+  width: 100%;
+}
+footer p {
+  color: var(--color-primary);
+}
+
+button.btn-add {
+  padding: 0.5rem 2rem;
+  background: var(--color-primary);
+  color: var(--color-commun-White);
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button.btn-add:hover {
+  background: var(--color-primary-hover);
+}
+
+.box {
+  width: 50%;
+}
+
+.form-group {
+  padding: 1rem;
+}
+
+.form-group label {
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.form-group input {
+  margin-top: 0.5rem;
+  padding: 0.4rem;
+  width: 90%;
+  border: 1px solid var(--color-primary);
+}
+.form-group select {
+  margin-top: 0.5rem;
+  padding: 0.4rem;
+  width: 95%;
+  border: 1px solid var(--color-primary);
 }
