--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,6 +189,7 @@ button.btn-add:hover {
   padding: 0.4rem;
   width: 90%;
   border: 1px solid var(--color-primary);
+  outline: 0;
 }
 .form-group select {
   margin-top: 0.5rem;
